...



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/hola_text"
                    android:text="HOLA"
                    android:layout_marginTop="20dp"
                    android:textSize="35sp"
                    android:fontFamily="casual"
                    android:layout_below="@+id/user_image"
                    android:layout_centerHorizontal="true"
...
